feat(S12P11A404-220): [gateway] 이메일 인증 CORS 설정